--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -46,8 +46,9 @@ jobs:
         uses: actions/checkout@v2
       - name: render config
         run: |
-          mkdir rlt_task
-          cat docker-compose.yml | envsubst > docker-compose.yml
+          mkdir rlt_task_app
+          cat docker-compose.yml | envsubst > docker-compose.yml.temp
+          mv docker-compose.yml.temp docker-compose.yml
       - name: clone files to server
         uses: appleboy/scp-action@master
         with:
@@ -55,7 +56,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           source: "docker-compose.yml"
-          target: "rlt_task"
+          target: "rlt_task_app"
       - name: run docker-compose
         uses: appleboy/ssh-action@master
         with:
